added titles in each h2

--- a/index.html
+++ b/index.html
@@ -8,51 +8,51 @@
 </head>
 <body>
   <article>
-    <h1>Schools</h1>
+    <h1>Школы</h1>
     <p>
-      <h2></h2>
+      <h2>школа №1 им. В.И.Ленина</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №5 им. Нариманова</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №9 им. Дружбы</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №6 им. А.П.Чехова</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №2 им. Пржевальского</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №11 им. Горького</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №15</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №3</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №4</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №7</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №8</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №10</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №12</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №13</h2>
     </p>
     <p>
-      <h2></h2>
+      <h2>школа №14</h2>
     </p>
   </article>
 
