added lorem in each paragraph

--- a/index.html
+++ b/index.html
@@ -11,48 +11,63 @@
     <h1>Школы</h1>
     <p>
       <h2>школа №1 им. В.И.Ленина</h2>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque deleniti amet sed delectus aut quidem voluptas eligendi necessitatibus officiis tempora nemo tenetur cum ducimus, a soluta culpa, nostrum voluptates qui.
     </p>
     <p>
       <h2>школа №5 им. Нариманова</h2>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ipsum doloribus odio nihil soluta sapiente, iste facere quaerat sunt modi ea vitae repellendus officiis, in exercitationem porro autem delectus neque?
     </p>
     <p>
       <h2>школа №9 им. Дружбы</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat quis enim, error mollitia id repellat odit. Enim, tempora possimus provident distinctio, doloribus iusto asperiores non, maiores quos adipisci perspiciatis?
     </p>
     <p>
       <h2>школа №6 им. А.П.Чехова</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dignissimos ratione rem dolor sapiente. Iste, quae. Minus, porro tenetur earum at quisquam, cupiditate optio, ea dolorum aliquid illum eaque accusamus.
     </p>
     <p>
       <h2>школа №2 им. Пржевальского</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum corporis commodi ratione, ipsa impedit earum fugiat animi, reiciendis adipisci perferendis voluptatem voluptatibus expedita neque quis, nobis eligendi quo nihil corrupti.
     </p>
     <p>
       <h2>школа №11 им. Горького</h2>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea sequi eos quis illo neque, id quisquam recusandae ex nam deserunt dolorem et esse accusantium unde provident voluptas? Facere, laudantium.
     </p>
     <p>
       <h2>школа №15</h2>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus ullam quasi sint ex tempora recusandae modi nesciunt? Iusto, alias, earum ex, possimus omnis voluptatibus quia impedit facere ipsum sed dolorem.
     </p>
     <p>
       <h2>школа №3</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur odio maiores fugiat eveniet architecto natus et repellendus similique. Soluta repellat saepe temporibus natus harum asperiores cumque et odit commodi!
     </p>
     <p>
       <h2>школа №4</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ea, ex voluptates minima dolorum similique eaque molestias omnis voluptatibus harum officia nulla, temporibus, odio reprehenderit adipisci recusandae ipsa illo culpa.
     </p>
     <p>
       <h2>школа №7</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae optio sed reprehenderit quae soluta laudantium, fuga tenetur. Officiis expedita ipsa ratione molestias impedit. Suscipit enim dolore tenetur quis nisi.
     </p>
     <p>
       <h2>школа №8</h2>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quos saepe consequatur, minima nobis sapiente nihil. Debitis est deleniti perspiciatis, nihil aperiam molestias illum itaque quod consequuntur magni in. Delectus.
     </p>
     <p>
       <h2>школа №10</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed labore odio illo impedit ad maxime sint aut, veritatis ipsum quo cupiditate et consequatur vel repudiandae quia! Voluptatum nesciunt cumque obcaecati?
     </p>
     <p>
       <h2>школа №12</h2>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio maxime ut iusto dolor fugiat, vero at sint illo animi, doloremque perferendis inventore quae aliquam earum, quod vitae. Suscipit, at ab.
     </p>
     <p>
       <h2>школа №13</h2>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ratione cupiditate excepturi expedita omnis illum delectus veniam iusto non quidem doloremque provident minima recusandae, ex dolore deserunt asperiores est mollitia.
     </p>
     <p>
       <h2>школа №14</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, earum maxime, officia a tempora voluptatem amet optio temporibus quas error repellat voluptate sunt accusamus magnam excepturi, et autem reprehenderit alias?
     </p>
   </article>
 
