--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
   <title>Documen2t</title>
 </head>
 <body>
-  <header></header>
+  <header id="0"></header>
   <nav>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#1"></a></li>
+      <li><a href="#2"></a></li>
+      <li><a href="#3"></a></li>
+      <li><a href="#4"></a></li>
+      <li><a href="#5"></a></li>
+      <li><a href="#6"></a></li>
+      <li><a href="#7"></a></li>
+      <li><a href="#8"></a></li>
+      <li><a href="#9"></a></li>
+      <li><a href="#10"></a></li>
+      <li><a href="#11"></a></li>
+      <li><a href="#12"></a></li>
+      <li><a href="#13"></a></li>
+      <li><a href="#14"></a></li>
+      <li><a href="#15"></a></li>
     </ul>
   </nav>
   <article>
@@ -90,6 +89,7 @@
       <h2>школа №14</h2>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, earum maxime, officia a tempora voluptatem amet optio temporibus quas error repellat voluptate sunt accusamus magnam excepturi, et autem reprehenderit alias?
     </p>
+    <a href="#0">Top</a>
   </article>
 
 </body>
