--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </nav>
   <article>
     <h1>Школы</h1>
+    <img src="./image/classroom-2093744_960_720.jpg" alt="">
     <p id="1">
       <h2>школа №1 им. В.И.Ленина</h2>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque deleniti amet sed delectus aut quidem voluptas eligendi necessitatibus officiis tempora nemo tenetur cum ducimus, a soluta culpa, nostrum voluptates qui.
