--- a/2.html
+++ b/2.html
@@ -28,5 +28,11 @@
       <li><a href="#15">школа №14</a></li>
     </ul>
   </nav>
+  <main>
+    <h1></h1>
+    <p></p>
+    <p></p>
+    <p></p>
+  </main>
 </body>
 </html>
