--- a/15.html
+++ b/15.html
@@ -30,6 +30,7 @@
   </nav>
   <main>
     <h1></h1>
+    <img src="./image/classroom-2093744_960_720.jpg" alt="">
     <p></p>
     <p></p>
     <p></p>
